--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
     </div>
   </div>
 
-  <!--clip-path-->
+<!--clip-path-->
 <!--  <div class="item">-->
 <!--    <div class="item_title">clip-path</div>-->
 <!--    <div class="item_content">-->
@@ -155,5 +155,38 @@
 <!--      </div>-->
 <!--    </div>-->
 <!--  </div>-->
+
+    <div class="item">
+      <div class="item_title">融合</div>
+      <div class="item_content">
+        <div class="item_tip">
+          <p>利用filter: blur()和filter: contrast()，产生融合现象</p>
+        </div>
+        <div class="container">
+          <div class="filter-mix"></div>
+        </div>
+
+        <div class="fix">
+          <div class="fix-number">98.7%</div>
+          <div class="fix-contrast">
+            <div class="fix-circle"></div>
+            <ul class="fix-bubbles">
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+
+</div>
+
 </body>
 </html>
